# SILA_test

./: README.md
arduino-thermistor-thermometer-develop/: .bumpversion.cfg  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS.md  DEVELOPMENT.md  Dockerfile  Dockerfile_AWS  HISTORY.md  MANIFEST.in  Makefile  README.md  TODOs.md  docker-compose.yml  install-pre-commit-hook.py  pyproject.toml  pyproject.toml_orig  setup.py  tasks.py
arduino-thermistor-thermometer-develop/SiLA_features/: ConnectionInfoProvider-v1_0.sila.xml  DeviceInfoProvider-v1_2.sila.xml  LightIntensityController-v1_1.sila.xml  LoggingService-v0_3.sila.xml  StorageInfoProvider-v1_0.sila.xml  TemperatureController-v1_1.sila.xml
arduino-thermistor-thermometer-develop/arduino_thermistor_thermometer/: device_metadata_model_context.py  jsonld_converter.py  storage_metadata_model.py
arduino-thermistor-thermometer-develop/arduino_thermistor_thermometer_if/: __main__.py  arduino_thermistor_thermometer_impl.py
arduino-thermistor-thermometer-develop/docs/: 2_sila_development.md  4_metadata_schemata.md  conf.py  index.rst  installation.rst  usage.rst
arduino-thermistor-thermometer-develop/jupyter/: README.md  arduino_thermistor_connection_metadata.json-ld  arduino_thermistor_device_metadata.json-ld  arduino_thermistor_metadata.json-ld  metadata_explorer.ipynb  serial_interface_dev.ipynb  thermometer_dev.ipynb  thermometer_explorer_client.ipynb
arduino-thermistor-thermometer-develop/schemata/: connection_metadata_model.context.jsonld  connection_metadata_model.yaml  device_metadata_model.context.jsonld  (+9 more)
(+207 files in other folders)
