[project]
name = "arduino_thermistor_thermometer"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arduino_thermistor_thermometer*"]

[tool.setuptools.package-data]
"arduino_thermistor_thermometer.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
